scripts/style.css
/* ... */
#seta-para-baixo i{
  font-size: 2.7em;
  color: var(--color02);
  animation: float 1.5s linear infinite;
  position: absolute;
  bottom: 7vh;
  left: 47%;
}

/* Habilidades */

#tela-3{
  max-width: 800px;
  align-items: start;
}
#tela-3 h3{
  text-align: start;
  width: 100%;
  margin: 20px 0;
  font-size: 1.7em;
  cursor: pointer;
  max-width: 400px;
  padding: 0 10px;
}
#container-habilidades{
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: flex-start;

}

.cont-hab{
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}
h3 i{
  color: var(--color02);
}
#cursos,
#conhecimentos{
  width: 100%;
  min-width: 240px;
  padding: 0 20px;
  margin: -10px;
}

.TituloCursos{
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  max-width: 400px;
}

.percentual{
  color: var(--color02);
}

.cursoName{
  color: var(--color00);
}

.barra{
  max-width: 400px;
  height: 10px;
  background-color: var(--color00);
  margin-bottom: 20px;
}

.concluido,
#c10,
#c70,
#c30,
#c50,
#c90{
  background-color: var(--color02);
  height: 10px;
}

.concluido{
  width: 100%;
}
#c10{
  width: 10%;
}
#c70{
  width: 70%;
}
#c50{
  width: 50%;
}
#c30{
  width: 30%;
}
#c90{
  width: 90%;
}
article{
  width: 100%;
  overflow: hidden;
  height: 100%;
  margin: auto;
}

article > div > span{
  display:block;
}

/* Projetos */

#tela-4 h2{
  margin: 15px 0 5px 0;
}

#tela-4 p{
  padding: 20px 0;
}

#proj-list{
  list-style: none;
}

.fa-link{
  color: var(--color03);
}

.proj-item{
  font-size: 1.2em;
  border-left: 2px solid var(--color02);
  padding-left: 5px;
  margin: 15px 0;
}

.link-repo{
  text-decoration: none;
  color: var(--color04);
}
.link-repo:hover{
  color: var(--color02);
}
.link-site i{
  color: var(--color02);
}
.link-site i:hover{
  color: var(--color04);
}
.container-projetos{
  flex-direction: row ;

}

#slider{
  margin: 0 auto;
  height: 310px;
  max-width: 460px;
  overflow: hidden;
  border-radius: 5px;
  border: 3px solid var(--color03);

}

#slides{
  height: 100%;
  width: 500%;
  height: 310px;
  display: flex;
}

#slides input{
  display: none;
}

.slide{
  width: 460px;
  position: relative;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.slide img{
  width: 460px;
  height: 100%;
}

#navigation-manual{
  position: absolute;
  width: 460px;
  display: flex;
  justify-content: center;
  gap: 4px;
  align-items: center;
  margin-top: 320px;
}

.manual{
  border: 2px solid var(--color02);
  height: 10px;
  width: 10px;
  cursor: pointer;
  transition: background-color .2s linear;
  border-radius: 50%;
}

.manual:hover{
  border-color: var(--color02);
  background-color: var(--color02);
}

/*Scroller*/

#radio1:checked ~ .first{
  margin-left: 0;
}

#radio2:checked ~ .first{
  margin-left: -20%;
}

#radio3:checked ~ .first{
  margin-left: -40%;
}
#radio4:checked ~ .first{
  margin-left: -60%;
}


.first{
  transition: margin .5s ease-in-out;
}

/*Indicador de pagina*/

#radio1:checked ~ #navigation-manual #b1{
  background-color: var(--color02);
}

#radio2:checked ~ #navigation-manual #b2{
  background-color: var(--color02);
}

#radio3:checked ~ #navigation-manual #b3{
  background-color: var(--color02);
}
#radio4:checked ~ #navigation-manual #b4{
  background-color: var(--color02);
}
.manual:hover{
  border-color: var(--color02);
  background-color: var(--color02);
}

/* CONTATOS */

.contatos-div{
  columns: 3;
  list-style: none;
  margin-top: 30px;
}
.social-link{
  text-decoration: none;
  color: var(--color04);
}
.socialBox{
  border: 2px solid var(--color02);
  padding: 15px 10px;
  border-radius: 4px;
  display: flex;
  justify-content: space-between;
  max-width: 180px;
  transition: all .5s;
}
.socialBox span{
  font-size: 1.2em;
}
.socialBox i{
  font-size: 1.5em;
  color: var(--color02);
}
.BoxIN{
  margin-top: 20px;
}
#instagram:hover .fa-instagram{
  color: white;
}
#youtube:hover .fa-youtube{
  color: white;
}
#linkedin:hover .fa-linkedin{
  color: white;
}
#twitter:hover .fa-twitter{
  color: white;
}
#email:hover .fa-envelope{
  color: var(--color01);
}
#github:hover .fa-github{
  color: white;
}
#instagram:hover{
  color:white ;
  background-image:linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
  border: solid 2px #cc2366;
}
#linkedin:hover{
  color:white ;
  background-color: #0e76a8;
  border: solid 2px #0e76a8;
}
#github:hover{
  color:white ;
  background-color: rgb(13, 13, 13);
  border: solid 2px rgb(14, 14, 14);
}
#twitter:hover{
  color: white;
  background-color: #1DA1F2;
  border: solid 2px #1DA1F2;
}
#youtube:hover{
  color: white;
  background-color:#FF0000;
  border: solid 2px #FF0000;
}
#email:hover{
  font-weight: 600;
  color: var(--color01);
  background-color: var(--color02);
  border: solid 2px var(--color02);
}

#seta-para-cima i{
  font-size: 2.7em;
  color: var(--color02);
  position: absolute;
  bottom: 5vh;
  right: 20px;
  font-weight: normal;
}

/* formulario de email */

form{
  margin-top: 30px;
}
#formulario{
  height: 80vh;
  width: calc(100vw - 60px);
  overflow-y: hidden;
}
#formulario label{
  font-size: 1.1em;
  margin-left: 5px;
}
.e-mail{
  display: flex;
  flex-direction: column;
}
.mensagem{
  margin-top: 20px;
}
.e-mail input{
  height: 30px;
  width: 100%;
  border: 2px solid var(--color02);
  border-radius: 4px;
  background-color: var(--color01);
  color: white;
  font-size: 1.1em;
  outline: 0;
  text-indent: 10px;
  font-family: 'Chakra Petch', sans-serif;

}
.mensagem textarea{
  width: 100%;
  border: 2px solid var(--color02);
  border-radius: 4px;
  background-color: var(--color01);
  color: white;
  font-size: 1.1em;
  outline: 0;
  text-indent: 10px;
  font-family: 'Chakra Petch', sans-serif;
}
/* ... */

